# ResNet-50-CBAM-PyTorch

./: pyproject.toml  requirements.txt  train.py
